# parcels-benchmarks

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  asv.conf.json  asv.conf.jsonc  benchmark_kernelloop.py  benchmark_results.jsonl  benchmark_vecorized_kernels.py  benchmark_vectorized_kernels.py  benchmarks.json  catalogue.yaml  dashboard  download-catalogue.py  download_catalogue.py  pixi.toml  pyproject.toml  run_benchmarks
.asv/html/: index.json  info.json  regressions.xml
.asv/results/: benchmarks.json
.buildkite/: pipeline.yml
CopernicusMarineService/: benchmark_CopernicusMarineService.py
FESOM-Baroclinic-Gyre/: benchmark.py
MOi-Curvilinear/: benchmark_index_search.py  benchmark_moi_curvilinear.py  benchmark_morton_hashing.py
benchmark_utils/: benchmark_setup.py
benchmarks/: __init__.py  benchmark_moi_curvilinear.py  benchmarks.py  catalogs.py  fesom-baroclinic-gyre-2d.py  fesom2.py  icon.py  moi_curvilinear.py  util.py
benchmarks_staging/: fesom-baroclinic-gyre-2d.py
catalogs/parcels-benchmarks/: catalog.yml
catalogs/parcels-examples/: catalog.yml
parcels_benchmarks/: __init__.py  benchmark_setup.py  benchmarks.json
results/: benchmarks.json
results/UU-X91W3M741X/: 7425f840-rattler-py3.12.json  machine.json
results/claymation/: b6eecd3c-rattler-py3.12.json  machine.json
sandbox/: pixi.toml
scripts/: download-catalog.py  download-catalogue.py  test_load_all_catalog_entries.py
util/: __init__.py  machine.py  simbench  usrbintime.py
(+8 files in other folders)
